--- a/src/main/webapp/resources/forge-style.css
+++ b/src/main/webapp/resources/forge-style.css
@@ -26,7 +26,11 @@ body {
    	margin: 0;
    	padding: 0;
    	font-size: 0.9em;
-	background-color: #5F5F5F;
+    background-color: #ffffff;
+    background-image: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0.65) 100%), url('http://previews.123rf.com/images/snake3d/snake3d1107/snake3d110700070/10071519-Balloons-party-happy-birthday-decoration-multicolored-translucent-Joy-fun-abstract-Holiday-anniversa-Stock-Photo.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 	color: #5b5b5b;
 	font-size:13px;
     text-shadow: 0 1px 0 #efefef;
@@ -122,15 +126,14 @@ label {
  */
  
 .forgecontainer {
-    background-color: #F2F2F2;
-    border-radius: 4px 4px 4px 4px;
-    box-shadow: 0 2px 4px #000000;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 15px;
 	padding: 0 10px 20px 10px;
 }
 
 footer {
    	clear: both;
-    color: #c1c1c1;
+    color: #000000;
    	font-size: 0.85em;
 	width: 100%;
 	margin: 0px;
@@ -312,13 +315,14 @@ footer p {
 }
 
 #content .data-table {
+	background-color: #ffffff;
+	border-radius: 5px;
 	width: 100%;
 	border: 1px solid #cccccc;
 	margin-bottom: 7px;
 }
 
 #content .data-table thead th {
-	background-color: #dddddd;
 	border-bottom: 1px solid #cccccc;
 }
 
